2012-08-21  János Badics  <jbadics@inf.u-szeged.hu>

        [Qt] Gardening. Skip new failing tests.

        Reviewed Csaba Osztrogonác.

        * platform/qt/Skipped:

2012-08-17  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] REGRESSION(r125428): fast/profiler/nested-start-and-stop-profiler.html fails
        https://bugs.webkit.org/show_bug.cgi?id=93897

        Reviewed by Kenneth Rohde Christiansen.

        * platform/qt/Skipped: Unskip test that is now passing.

2012-08-21  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed GTK gardening.

        fast/js/random-array-gc-stress.html has started to flakily crash in
        release builds as well, so expanding the expectation.

        The fast/forms/range/range-hit-test-with-padding.html test has been
        failing since introduced in 126132. Adding a text expectation.

        Marking one more frame flattening test as flaky.

        Skipping two calendar picker tests. The feature is currently unsupported
        and the tests take half a minute to run, so it's not really worth it.

        * platform/gtk/TestExpectations:

2012-08-21  Chris Evans  <cevans@google.com>

        Add another interesting test that used to fire a different ASSERT before we fixed https://bugs.webkit.org/show_bug.cgi?id=36427:
        ASSERT(parents.size() >= depth + 1)
        https://bugs.webkit.org/show_bug.cgi?id=84793

        Reviewed by Abhishek Arya.

        * fast/xpath/xpath-detached-import-assert-expected.txt: Added.
        * fast/xpath/xpath-detached-import-assert.html: Added.

2012-08-20  Keishi Hattori  <keishi@webkit.org>

        Clicking input type=range with padding or border sets wrong value
        https://bugs.webkit.org/show_bug.cgi?id=94473

        Reviewed by Kent Tamura.

        * fast/forms/range/range-hit-test-with-padding-expected.txt: Added.
        * fast/forms/range/range-hit-test-with-padding.html: Added.

2012-08-20  MORITA Hajime  <morrita@google.com>
